--- a/todo.txt
+++ b/todo.txt
@@ -19,3 +19,12 @@ non stiff - extra DoF - Load density 1000 - 10 secodns babbling
 
 'cur3_V5_TD_full_test_nonstiff_3'
 non stiff - extra DoF - Load density 2000 - 10 secodns babbling
+
+
+
+
+
+cur3_V5_TD_test41
+testimg a lower frequency (omega=1.5)
+cur3_V5_TD_test42
+no acc + testimg a lower frequency (omega=1.5)
